fix: remove letter spacing in header

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -2,13 +2,12 @@
 
 .Header
   @extend .Text
-  font-size: 19vw
+  font-size: 18.7vw
   margin: 0
   margin-top: -8.01vw
   margin-left: -.5vw
   padding: 0
   font-weight: 300
-  letter-spacing: -.125rem
 
 .Header_theme_light
   color: var(--theme-light-secondary)
